--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.2",
+    "socket.io": "^2.0.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
