--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "socket.io": "^2.0.4",
     "vue": "^2.5.2",
